# ortools-cp-sat-delivery-problem

./: .gitignore  LICENSE.md  README.md  map_orders.py  pyproject.toml
ai_notes/: development-rules.md
docker/osrm/: docker-compose.yml
map_orders/: .map_orders_state.json  __init__.py  io_handlers.py  osrm_client.py  solver_result.py  state.py  transform.py  ui_components.py
map_orders_app/: .gitignore  README.md  package.json  playwright.config.ts  vitest.config.ts
map_orders_app/data/: map_orders_state.json
map_orders_app/src/app/: globals.css  layout.tsx  page.tsx
map_orders_app/test-results/: .last-run.json
order_grouping/: README.md  __init__.py  api.py  cp_sat_model.py  domain_mapping.py  pyproject.toml  solver-algo.py  solver-external-for-reference.py  solver-external.py  solver-gpt.py  solver.py  solver_custom.py
order_grouping/tests/: conftest.py  test_api.py  test_solver.py
solver-input-cases/: solver_input_2025-10-03T10_26_34.389Z-почти-серт-на-заказе-5.json  solver_input_много-и-заказов-и-курьеров-локльный-оптимум.json  solver_input_низкая-загрузка-5-заказов-6-курьеров.json  solver_input_почти-серт-на-заказе-5.json  solver_input_реальное-состояние-пиццерии-не-хватает-матрицы-времён.json  solver_input_слишком_много_заказов_на_курьера.json  test.geojson  орёл-1-кейс-в-разные-не-в-пик.geojson  орёл-1-кейс-в-разные-не-в-пик.json  орёл-1-реальные-заказы.geojson  орёл-1-реальный-кейс-в-разные-не-в-пик.json
solver_input_cases/: solver_input_1.json  solver_input_1_v2.json
tests/: test_api.py  test_solver.py  test_solver_gpt.py
(+54 files in other folders)
