[tool.poetry]
name = "order-grouping"
version = "0.1.0"
description = "Service for grouping pizzeria orders"
authors = ["Rinat <r.sharafetdinov@dodobrands.io>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.21"
python = "3.11"
ortools = "^9.11.4210"
mlflow = "^2.20.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^5.13.2"
pytest = "^8.3.4"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
databricks-connect = "15.4.5"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
